@@ -78,6 +78,7 @@ GEANT4_DEFINE_MODULE(NAME G4hadronic_xsect
 	G4CrossSectionInelastic.hh
 	G4CrossSectionPairGG.hh
 	G4ElectroNuclearCrossSection.hh
+        G4DiffElasticRatio.hh
 	G4EMDissociationCrossSection.hh
 	G4EMDissociationSpectrum.hh
 	G4GeneralSpaceNNCrossSection.hh
@@ -145,6 +146,7 @@ GEANT4_DEFINE_MODULE(NAME G4hadronic_xsect
 	G4CrossSectionElastic.cc
 	G4CrossSectionInelastic.cc
 	G4CrossSectionPairGG.cc
+        G4DiffElasticRatio.cc
 	G4ElectroNuclearCrossSection.cc
 	G4EMDissociationCrossSection.cc
 	G4EMDissociationSpectrum.cc
