@@ -14,6 +14,12 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+
+07 November 2014 V.Ivanchenko (hadr-cross-V10-00-17)
+---------------------------------------------------
+07 November 2014 V.Grichine class managing single diffraction to 
+                  elastic cross section ratio G4DiffElasticRatio 
+
 30 October 2014 V.Ivanchenko (hadr-cross-V10-00-16)
 ---------------------------------------------------
 - added new interface class G4VCrossSectionRatio 
